RESOLVED FIXED247424
Wrong names of getter and setter "0" for class
https://bugs.webkit.org/show_bug.cgi?id=247424
Summary Wrong names of getter and setter "0" for class
Kanguk Lee
Reported 2022-11-03 08:43:16 PDT
// input.js class x { get 0 ( ) { } } print( Object.getOwnPropertyDescriptor(x.prototype, "0").get.name ); _______________________________________________________________ Hello, JSC generates the name of the getter `get 0 ( ) { }` / `set 0 ( ) { }` as "get " / "set " but it should be "get 0" / "set 0". Running the input.js with JSC prints --- $ jsc input.js get --- while other engines behave like --- # V8 (used console.log) $ node input.js get 0 # GraalJS $ js input.js get 0 --- WebKit version: 615.1.10
Attachments
Radar WebKit Bug Importer
Comment 1 2022-11-03 18:04:35 PDT
David Degazio
Comment 2 2022-11-14 16:15:32 PST
EWS
Comment 3 2022-11-16 09:33:04 PST
Committed 256740@main (ad1302fe8297): <https://commits.webkit.org/256740@main> Reviewed commits have been landed. Closing PR #6494 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.